Bug 162278 - [25.2] Validation drop-down list appears away from the cell
Summary: [25.2] Validation drop-down list appears away from the cell
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.0 target:24.2.6 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Cell-Validity
  Show dependency treegraph
 
Reported: 2024-07-31 05:03 UTC by nobu
Modified: 2024-08-01 04:22 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2024-07-31 05:03:09 UTC
Description:
Validation drop-down list appears away from the cell.

Steps to Reproduce:
1. Open New Calc.
2. Insert Cell validity in [A1], and set some list.
3. Displays a drop-down list. [ Alt + Down ]

Actual Results:
4. Drop-down list appears away from cells.

Expected Results:
4. A drop-down list appears below the cell.


Reproducible: Always


User Profile Reset: No

Additional Info:

Not Reproduced with
Version: 24.8.0.0.beta1+ (X86_64) / LibreOffice Community
Build ID: 12b0d0dd2e22a1abc955a11bfe4ae87631409622
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 10240); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded

Reproducible with
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f806fc136b3410ec9a1e09320d100c78b33c867b
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 10240); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded
Comment 1 ady 2024-07-31 05:39:59 UTC
Repro.
Comment 2 m_a_riosv 2024-07-31 07:18:35 UTC
Reproducible
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 21d51ac71d320c6b2b7d83266d246e1e31cfe03d
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded



Works fine for me with
Version: 24.2.5.2 (X86_64) / LibreOffice Community
Build ID: bffef4ea93e59bebbeaf7f431bb02b1a39ee8a59
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
and
Version: 24.8.0.2 (X86_64) / LibreOffice Community
Build ID: 57ceca7d2eefdf83e7c9b4135a017f3361a8133f
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 3 stragu 2024-07-31 12:04:10 UTC
Not reproduced with gtk3 VCL plugin, but reproduced with gen:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ccdf1096a6103d2ab8690e8e97dcf3496160ecff
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: x11
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Bibisected with linux-64-25.2 repo to first bad build [d50731540a7971e7dbab1bb1e9bd6f77fb9a4899] which is:

commit 85511e27d259d6b19cc6c463fc06368c14511bb8
author	Caolán McNamara 	Sat Jul 27 20:25:35 2024 +0100
committer	Caolán McNamara 	Sun Jul 28 14:58:49 2024 +0200
Resolves: tdf#160509 use BorderWindow client for dialog parent
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171104

Caolán, can you please have a look?
Comment 4 Patrick (volunteer) 2024-07-31 13:54:23 UTC
Interestingly, I cannot reproduce this in my macOS local master build. I tried with Skia/Metal, Skia/Raster, and Skia disabled and in all three cases, the dropdown list's is displayed immediately below the cell:

Version: 25.2.0.0.alpha0+ (AARCH64) / LibreOffice Community
Build ID: 1a26552de2e692f205695e581166f5eeca67b100
CPU threads: 8; OS: macOS 15.0; UI render: Skia/Metal; VCL: osx
Locale: en-CA (en_CA.UTF-8); UI: en-US
Calc: threaded
Comment 5 Caolán McNamara 2024-07-31 15:29:21 UTC
I think the difference is that on macOS we don't have a menubar inside our toplevel frames, so the problem doesn't arise I think.
Comment 6 Caolán McNamara 2024-07-31 15:38:26 UTC
https://gerrit.libreoffice.org/c/core/+/171330
Comment 7 Commit Notification 2024-07-31 18:39:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f92897cfcd6ea9a57bbeec792733111eb49e7dc5

Resolves: tdf#162278 get popup position relative to the dest parent

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-08-01 04:22:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/c34fced015ce06ced01e29971ba26b3871c0ec8d

Resolves: tdf#162278 get popup position relative to the dest parent

It will be available in 24.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-08-01 04:22:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/b7d46f28952c1795ff7f62550a25f04b6f7c9fcd

Resolves: tdf#162278 get popup position relative to the dest parent

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.