Resolves: tdf#162278 get popup position relative to the dest parent

since:

commit 85511e27d259d6b19cc6c463fc06368c14511bb8
Author:     Caolán McNamara <caolan.mcnamara@collabora.com>
AuthorDate: Sat Jul 27 20:25:35 2024 +0100

    Resolves: tdf#160509 use BorderWindow client for dialog parent

we now use the clientwindow of toplevel frames as the parent window to
use as the parent for dialogs/etc so we get the right SystemWindow for
dialogs.

So we need to also adjust the calculation of where we put child popups
of such toplevel frames to be relative to the clientwindow instead of
borderwindow

Change-Id: I896e75a5ad709a51a445dc1be2c0fb9f985f01a7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171295
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Jenkins